# ChangeLog for dev-ruby/sqlite3
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/sqlite3/ChangeLog,v 1.29 2015/01/08 11:30:18 ago Exp $

  08 Jan 2015; Agostino Sarubbo <ago@gentoo.org> sqlite3-1.3.10.ebuild:
  Stable for ppc64, wrt bug #533590

  02 Jan 2015; Agostino Sarubbo <ago@gentoo.org> sqlite3-1.3.10.ebuild:
  Stable for sparc, wrt bug #533590

  01 Jan 2015; Agostino Sarubbo <ago@gentoo.org> sqlite3-1.3.10.ebuild:
  Stable for ia64, wrt bug #533590

  31 Dec 2014; Agostino Sarubbo <ago@gentoo.org> sqlite3-1.3.10.ebuild:
  Stable for ppc, wrt bug #533590

  28 Dec 2014; Agostino Sarubbo <ago@gentoo.org> sqlite3-1.3.10.ebuild:
  Stable for x86, wrt bug #533590

  28 Dec 2014; Jeroen Roovers <jer@gentoo.org> sqlite3-1.3.10.ebuild:
  Stable for HPPA (bug #533590).

  26 Dec 2014; Agostino Sarubbo <ago@gentoo.org> sqlite3-1.3.10.ebuild:
  Stable for amd64, wrt bug #533590

*sqlite3-1.3.10-r1 (26 Dec 2014)

  26 Dec 2014; Hans de Graaff <graaff@gentoo.org> sqlite3-1.3.10.ebuild,
  +sqlite3-1.3.10-r1.ebuild:
  Create stable candidate.

*sqlite3-1.3.10 (02 Nov 2014)

  02 Nov 2014; Manuel Rüger <mrueg@gentoo.org> +sqlite3-1.3.10.ebuild,
  -sqlite3-1.3.8-r1.ebuild:
  Version bump.

  13 Aug 2014; Raúl Porcel <armin76@gentoo.org> sqlite3-1.3.9-r1.ebuild:
  Add ~sparc wrt #468536

*sqlite3-1.3.9-r1 (20 Apr 2014)

  20 Apr 2014; Hans de Graaff <graaff@gentoo.org> +sqlite3-1.3.9-r1.ebuild:
  Add ruby21. Use rdoc directly instead of via hoe to fix bug 505150.

  05 Apr 2014; Manuel Rüger <mrueg@gentoo.org> sqlite3-1.3.6.ebuild,
  sqlite3-1.3.8-r1.ebuild, sqlite3-1.3.9.ebuild:
  Remove ree18 and ruby18 target. Remove virtual/ruby-test-unit.

*sqlite3-1.3.9 (28 Feb 2014)

  28 Feb 2014; Manuel Rüger <mrueg@gentoo.org> +sqlite3-1.3.9.ebuild:
  Version bump.

  25 Feb 2014; Hans de Graaff <graaff@gentoo.org> sqlite3-1.3.6.ebuild,
  sqlite3-1.3.8-r1.ebuild: