@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/sqlite3
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/sqlite3/ChangeLog,v 1.29 2015/01/08 11:30:18 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/sqlite3/ChangeLog,v 1.30 2015/01/08 11:35:00 mrueg Exp $
+
+  08 Jan 2015; Manuel Rüger <mrueg@gentoo.org> -sqlite3-1.3.6.ebuild,
+  -sqlite3-1.3.9-r1.ebuild, -sqlite3-1.3.9.ebuild:
+  Remove old.
 
   08 Jan 2015; Agostino Sarubbo <ago@gentoo.org> sqlite3-1.3.10.ebuild:
   Stable for ppc64, wrt bug #533590
